<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:baselineAligned="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/Layout_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp">

        <TextView
            android:id="@+id/pole1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_weight="0.7"
            android:gravity="center_horizontal"
            android:textSize="12sp"
            android:textColor="@color/grey"/>

        <TextView
            android:id="@+id/pole2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:text="@string/count_prev"
            android:textSize="12sp"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/pole3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/count_value"
            android:textSize="12sp"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/pole4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/count_diff"
            android:textSize="12sp"
            android:gravity="center_horizontal"/>

    </LinearLayout>

</LinearLayout>