<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:id="@+id/lin_login"
    android:clickable="true">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="155dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="24dp"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        app:srcCompat="@drawable/fon_top"
        tools:layout_editor_absoluteX="102dp" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/last3"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="267dp" />

    <android.support.v7.widget.AppCompatButton xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:elevation="24dp"
        android:text="@string/last4"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:backgroundTint="@color/ColorPrimary"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        tools:layout_editor_absoluteX="91dp" />

    <TextView
        android:id="@+id/tv_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/last5"
        android:textSize="20sp"
        android:textAllCaps="true"/>

</LinearLayout>