<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="2dp" />

    <ScrollView
        android:id="@+id/mainScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:id="@+id/add_app_cons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choice_LS"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/LS"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <FrameLayout
                        android:id="@+id/layout_choice_personal_account_click_view"
                        android:layout_width="@dimen/image_choice_personal_account_click_view_width"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/img_choice_personal_account"
                            android:layout_width="@dimen/image_choice_personal_account_size"
                            android:layout_height="@dimen/image_choice_personal_account_size"
                            android:layout_gravity="end"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            android:src="@drawable/ic_navigate_next" />
                    </FrameLayout>
                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/label_personal_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large_top_by4"
                android:text="@string/personal_account_without_colon"
                android:textSize="@dimen/text_size_large"
                android:textColor="@color/grey" />

            <Spinner
                android:id="@+id/spinner_personal_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_large"
                style="@style/Widget.AppCompat.Spinner.Underlined"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large_top_by4"
                android:text="@string/type_app"
                android:textSize="@dimen/text_size_large"
                android:textColor="@color/grey" />

            <Spinner
                android:id="@+id/type_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/types_app"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_large"
                style="@style/Widget.AppCompat.Spinner.Underlined"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Описание"
                android:textSize="16sp"
                android:textColor="@color/grey"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/text_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColorHint="@color/grey"
                android:textCursorDrawable="@null"
                android:textSize="16sp"
                android:typeface="sans"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_large_top_by4"
                android:textColor="@color/grey"
                android:text="@string/attach_files"
                android:textSize="@dimen/text_size_large" />

            <include layout="@layout/photo_list_item"
                android:layout_marginTop="@dimen/padding_large_top_by4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <android.support.v7.widget.AppCompatButton
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/save_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:backgroundTint="@color/ColorPrimary"
                android:elevation="24dp"
                android:layout_weight="0.95"
                android:text="@string/send_app"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/padding_top_5dp"
                android:layout_marginBottom="12dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
