<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin_small"
    tools:showIn="@layout/activity_tech_send">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Задайте вопрос здесь, опишите проблему. Мы обязательно Вам поможем."
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:inputType="phone"
                android:digits="0123456789+-"
                android:maxLength="15"
                android:textCursorDrawable="@null"
                android:ems="10"
                android:hint="@string/ch_telefon" />

            <EditText
                android:id="@+id/edMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textCursorDrawable="@null"
                android:ems="10"
                android:hint="@string/ch_mail"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/ch_text"
                android:lines="4"
                android:maxLength="1900"
                android:textCursorDrawable="@null" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <android.support.v7.widget.AppCompatButton xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/btn_send"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5"
                    android:elevation="24dp"
                    android:text="@string/btn_tech_ok"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    app:backgroundTint="@color/ColorPrimary" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>